ganti menggunakan tailwind

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 DB_USER=postgres
-DB_PASSWORD=your_postgres_password_here
+DB_PASSWORD=hnn
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=clinical_copilot
