--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,4 @@ DB_PORT=5432
 DB_NAME=clinical_copilot
 JWT_SECRET=your-secret-key-123
 PORT=3001
+GOOGLE_API_KEY=AIzaSyA7KEkQhZQrh-qDJOwZuQi7R_UMHxGVWzg
